SIL: Don't use interface types in abstraction pattern

This is broken in Swift 2.2 and was only fixed in master. It looks like
passing of the interface type into type lowering was introduced by this
commit from a recent redesign of closure captures:

https://github.com/apple/swift/commit/b76c0abc37c86236ade80db033b14fe095658479

Fixes <rdar://problem/24470533>, which is part of
<https://bugs.swift.org/browse/SR-661>.